--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -204,9 +204,6 @@ a, a:focus, a:hover {
 
 
 /* About Section */
-.about-content{
-    padding-right: 50px;
-}
 .about-img-wrap{
     padding-left: 70px;
 }
@@ -423,6 +420,11 @@ input, textarea {
         width: 60px;
     }
 
+    .siteHeader.stickyHeader .navbar-brand img {
+        width: 40px;
+        transition: var(--transition01);
+    }
+
     h2 {
         font-size: 32px;
     }
@@ -440,11 +442,20 @@ input, textarea {
     .bannerImg img {
         max-width: 470px;
         margin: 0 auto;
+        width: 100%;
     }
 }
 
 @media (max-width: 575.98px) {
     .siteHeader  .offcanvas {
         width: 300px;
+    }
+
+    h2 {
+        font-size: 28px;
+    }
+
+    h1 {
+        font-size: 36px;
     }
 }
