--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -270,6 +270,10 @@ img.dumbbell {
 }
 .classCard p {
     color: var(--textColor);
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 .classCard .content{
     padding: 20px;
@@ -278,7 +282,10 @@ img.dumbbell {
 .classCard{
     box-shadow: 0 0 25px 5px rgba(0,0,0,.1);
 }
-
+.classCard img {
+    aspect-ratio: 4/3;
+    object-fit: cover;
+}
 .classCard:hover{
     transform: translateY(-10px);
 }
